<resources>
    <string name="app_name">Text Addict</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <string name="title_person">Person</string>

    <string name="archive_article">Archive article</string>
    <string name="share_article">Share article</string>
    <string name="open_in_web">Open in WEB</string>
    <string name="delete_article">Delete article</string>
    <string name="add_to_favorite">Add to Favorite</string>

    <string name="item_article_logo">Item_article_logo</string>
    <string name="date_label">Date_label</string>
    <string name="domain_label">Domain</string>
    <string name="label">Label</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="username_label">UserName Label</string>
    <string name="count_pages">Count pages:</string>
    <string name="count_pages_label">Count pages label</string>
    <string name="reading_time">Reading time:</string>
    <string name="reading_time_label">Reading time label</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in_back"><![CDATA[< Log in]]></string>
    <string name="welcome">WELCOME</string>
    <string name="read_articles_together">Read articles together</string>
    <string name="forget_password">Forget password</string>
    <string name="not_account_yet_create_one">Not account yet? Create one</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="have_account_log_in">Have account? Log in</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="bad_credentials">Incorrect  login or password.</string>
    <string name="save_article">Save article</string>
    <string name="url_site">URL site</string>
    <string name="adding_article">ADDING ARTICLE</string>
    <string name="archived_articles">Archived articles</string>
    <string name="article_archive_title">Article archive title</string>
    <string name="count_articles">Count articles:</string>
    <string name="confirm_delete">Are you sure you want to delete the articles?</string>
</resources>
