<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_archive_article"
        android:icon="@drawable/ic_archive_white_24dp"
        android:orderInCategory="1"
        android:title="@string/archive_article"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_to_favorite"
        android:icon="@drawable/ic_star_white_24dp"
        android:orderInCategory="2"
        android:title="@string/add_to_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_open_in_web"
        android:icon="@drawable/ic_web_white_24dp"
        android:orderInCategory="3"
        android:title="@string/open_in_web"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share_article"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="4"
        android:title="@string/share_article"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_article"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="5"
        android:title="@string/delete_article"
        app:showAsAction="ifRoom" />
</menu>