<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="false">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_article_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/item_article_logo"
                android:scaleType="fitXY"
                card_view:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/item_article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_toEndOf="@+id/imageView"
                android:text="@string/label"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_article_domain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/imageView"
                android:text="@string/domain_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/item_article_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/item_article_domain"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/date_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>





